# grey-box-amp

./: .gitignore  README.md
docs/: index.html
docs/assets/: index-1786f641.js  index-188d8232.css  index-1db35866.js  index-20b54450.css  index-2234c64f.css  index-28a4d033.js  index-299dd2e7.css  index-33bcdd53.js  index-360cffb3.css  index-4bd8ea0e.js  index-4c98f169.js  index-61abe088.css  index-636c2327.js  index-655241fd.js  index-6c7e9dd2.js  index-74245fbe.css  index-8f2443c6.css  index-9802b05a.css  index-9a03c742.css  index-9a5d8235.js  index-aae5bafd.js  index-bc03bf79.js  index-bead83a7.js  index-c030aeca.css  index-c1a77074.js  index-c76fdade.css  index-cc6bfae9.css  index-cf9acf41.css  index-d39a4ad1.js  index-d729ead2.css  index-d7bd537c.js  index-ed43c3ee.css  index-ef8d8cb6.js  index-f6f84b4a.css  index-f91a3efc.js  index-fc5f319f.css  index-ff5c396f.js
listening-site/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
listening-site/src/: App.vue  style.css
listening-site/src/components/: ModelNames.vue
plugin/: .gitignore  CMakeLists.txt
plugin/NeuralGreyBoxAmpRT/: AmpModel.cpp  AmpModel.h  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/NeuralGreyBoxAmpRT/gui/: CustomLNF.h  Meter.h
plugin/NeuralGreyBoxAmpRT/models/: rnn21.json  ts1.json  ts3.json
plugin/NeuralGreyBoxAmpRT/nl_blocks/: CondAmp.cpp  CondAmp.h  PowerampBlock.cpp  PowerampBlock.h  PreampBlock.cpp  PreampBlock.h
plugin/NeuralGreyBoxAmpRT/ts_block/: Component.cpp  Component.h  DKModel.cpp  DKModel.h  TonestackBlock.cpp  TonestackBlock.h
plugin/cmake/: get_cpm.cmake
plugin/windows_build/: NeuralGreyBoxAmpRT.vst3
python/: data_loader.py  environment.yml  loss_funcs.py  model_configs.py  train_model.py
python/dk_model/: components_torch.py  dk_model_torch.py  tone_stack_torch.py
python/logs/tensorboard/amp_model/15_targets_LSTM40_pwr_GRU8/: epoch=11-step=12960.ckpt
python/logs/tensorboard/amp_model/15_targets_LSTM48_rnn_only/: epoch=37-step=41040.ckpt
python/logs/tensorboard/amp_model/1_target_LSTM40_pwr_GRU8/: epoch=255-step=18432.ckpt
python/logs/tensorboard/amp_model/1_target_LSTM48_rnn_only/: epoch=349-step=25200.ckpt
python/logs/tensorboard/amp_model/21_targets_LSTM40_pwr_GRU8/: epoch=15-step=24192.ckpt
python/models/: amp_model.py  cond_blocks.py  nl_block.py  ts_block.py
python/utils/: ir_funcs.py
vst/: NeuralGreyBoxAmpRT.vst3
(+3 files in other folders)
